fix spacings for transaction details modal

--- a/FullNode.UI/src/scss/_custom.scss
+++ b/FullNode.UI/src/scss/_custom.scss
@@ -441,3 +441,13 @@ button {&:hover {cursor: pointer;}}
     opacity: 0;
   }
 }
+
+/// MODAL DETAILS
+.details {
+  .list-inline {margin-bottom: .35rem;}
+  .alert {
+    margin-bottom: 0;
+    padding: .75rem .4rem;
+  }
+  &.modal-footer {padding: 0 15px;}
+}
