--- a/FullNode.UI/src/styles.css
+++ b/FullNode.UI/src/styles.css
@@ -8371,6 +8371,19 @@ button:hover {
   }
 }
 
+.details .list-inline {
+  margin-bottom: .35rem;
+}
+
+.details .alert {
+  margin-bottom: 0;
+  padding: .75rem .4rem;
+}
+
+.details.modal-footer {
+  padding: 0 15px;
+}
+
 @font-face {
   font-family: 'Linearicons-Free';
   src: url("./assets/fonts/Linearicons-Free.eot?w118d");
